--- a/003-ft/clarinet-projects/NailaNawaz/ft/Clarinet.toml
+++ b/003-ft/clarinet-projects/NailaNawaz/ft/Clarinet.toml
@@ -1,6 +1,10 @@
 [project]
 name = "ft"
 requirements = []
+[contracts.ft-trait]
+path = "contracts/ft-trait.clar"
+depends_on = []
+
 [contracts.game-contract]
 path = "contracts/game-contract.clar"
 depends_on = []
