--- a/003-ft/clarinet-projects/NailaNawaz/ft/Clarinet.toml
+++ b/003-ft/clarinet-projects/NailaNawaz/ft/Clarinet.toml
@@ -1,10 +1,10 @@
 [project]
 name = "ft"
 requirements = []
-[contracts.ft-trait]
-path = "contracts/ft-trait.clar"
+[contracts.ft-sip010-trait]
+path = "contracts/ft-sip010-trait.clar"
 depends_on = []
 
-[contracts.game-contract]
-path = "contracts/game-contract.clar"
+[contracts.game]
+path = "contracts/game.clar"
 depends_on = []
