--- a/004-ft-interface/backend/minahil-imtiaz/ft-interface-backend/tsconfig.json
+++ b/004-ft-interface/backend/minahil-imtiaz/ft-interface-backend/tsconfig.json
@@ -68,5 +68,7 @@
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "include": ["src/index.ts"],
+  "exclude": ["node_modules", "dist", "__tests__"]
 }
