--- a/005-nft-1/nft-projects/saadtahir/Clarinet.toml
+++ b/005-nft-1/nft-projects/saadtahir/Clarinet.toml
@@ -1,14 +1,18 @@
 [project]
-name = "velocity-ft"
+name = "velocity-nft"
 requirements = []
-[contracts.ft-trait]
-path = "contracts/ft-trait.clar"
+[contracts.nft-trait]
+path = "contracts/nft-trait.clar"
 depends_on = []
 
-[contracts.vbucks-game]
-path = "contracts/vbucks-game.clar"
-depends_on = ['velocity-ft']
+[contracts.string-conversion]
+path = "contracts/string-conversion.clar"
+depends_on = []
 
-[contracts.velocity-ft]
-path = "contracts/velocity-ft.clar"
+[contracts.velocity]
+path = "contracts/velocity.clar"
+depends_on = ["nft-trait", "string-conversion"]
+
+[contracts.velocity-market]
+path = "contracts/velocity-market.clar"
 depends_on = []
