--- a/005-nft-1/nft-projects/huzaifa/training-app/package.json
+++ b/005-nft-1/nft-projects/huzaifa/training-app/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
     "eslint-config-airbnb": "^18.2.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
