--- a/005-nft-1/nft-projects/huzaifa/training-app/package.json
+++ b/005-nft-1/nft-projects/huzaifa/training-app/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stacks/blockchain-api-client": "^0.69.0",
     "@stacks/connect": "^5.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
     "firebase": "^9.1.1",
     "firebase-tools": "^9.19.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
