--- a/004-ft-interface/backend/saad-s/package.json
+++ b/004-ft-interface/backend/saad-s/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec node_modules/.bin/babel-node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,12 @@
     "blockstack": "^21.1.1",
     "express": "^4.17.1",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "nodemon": "^2.0.14"
   }
 }
