--- a/003-ft/clarinet-projects/rustem/ft-dao/Clarinet.toml
+++ b/003-ft/clarinet-projects/rustem/ft-dao/Clarinet.toml
@@ -2,6 +2,11 @@
 name = "ft-dao"
 requirements = []
 costs_version = 1
+
+[contracts.ft-trait]
+path = "contracts/ft-trait.clar"
+depends_on = []
+
 [contracts.ft-dao]
 path = "contracts/ft-dao.clar"
-depends_on = []
+depends_on = ["ft-trait"]
